# CABench

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
configs/: config.example.yaml  config.py  llm_config.py  models_config.py
data/: graph_desc.json  manual_chain_level_data.jsonl  manual_graph_level_data.jsonl  manual_node_level_data.jsonl  meta.json  model_desc.jsonl  resource_desc.json  task_desc.jsonl  tmp.jsonl
pipeline/: base_pipeline.py  cot_code_pipeline.py  cot_pipeline.py  fewshot_code_pipeline.py  fewshot_pipeline.py  rag_code_pipeline.py  zeroshot_code_pipeline.py  zeroshot_pipeline.py
provider/: __init__.py  base_llm.py  constants.py  llm_provider_registry.py  openai_api.py
scripts/: calculator.py  cli.py  data.py  model_inference.py  operations.py  utils.py  workflows.py
server/: api_router.py  models_server.py  schema_base.py  settings.py
server/conf/: app.conf  nginx.conf
server/custom_pipeline/: tabular_pipeline.py
storage/: model_storage.py  resource_storage.py
templates/: cot_prompt.py  cot_sc_prompt.py  fewshot_prompt.py  pipeline_template.py  workflow_template.py  zeroshot_prompt.py
utils/: common.py  constants.py  cost_manager.py  logs.py  repair_llm_raw_output.py  report.py  serialize.py  token_counter.py
