[project]
name = "CABench"
version = "0.0.1"
description = ""
authors = [
    { name = "Pham Tung Thuy"},
    { name = "Dương Minh Quân"},
    { name = "Lương Duy Quân"}
]
license = { file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "appdirs>=1.4.4",
    "fastapi==0.115.9",
    "click==8.2.1",
    "networkx==3.4.2",
    "matplotlib==3.10.3",
    "scipy==1.15.3",
    "transformers==4.52.4",
    "pandas==2.3.0",
    "datasets==3.6.0",
    "torch==2.7.1",
    "torchaudio==2.7.1",
    "torchvision==0.22.1",
    "diffusers==0.33.1",
    "huggingface_hub==0.33.0",
    "pydub==0.25.1",
    "openai==1.86.0",
    "tenacity==9.1.2",
    "anthropic==0.54.0",
    "tiktoken==0.9.0",
    "requests==2.32.4",
    "pillow==11.2.1",
    "tree-sitter-python==0.21",
    "tree_sitter==0.22.3",
    "langchain_chroma==0.2.4",
    "langchain_core==0.3.65",
    "langchain_openai==0.3.23",
    "soundfile==0.13.1",
    "av==14.4.0",
    "nltk==3.9.1",
    "openpyxl==3.1.5",
    "scikit-learn==1.7.0",
    "sentencepiece (>=0.2.0,<0.3.0)",
    "termcolor (>=3.1.0,<4.0.0)",
    "rouge-score (>=0.1.2,<0.2.0)",
    "chardet==5.2.0",
    "nbformat==5.10.4",
    "nbclient==0.10.2",
    "pytesseract==0.3.13",
    "diskcache>=5.6.3",
    "py7zr>=0.21",
    "kaggle>=1.6,<1.7",
    "gdown==5.2.0",
    "loguru==0.7.3",
    "codebleu==0.7.0",
    "aiofiles==24.1.0"
]

[tool.setuptools]
packages = { find = { include = ["scripts", "scripts.*", "templates", "templates.*", "utils", "utils.*", "results", "results.*", "configs", "configs.*", "provider", "provider.*", "storage", "storage.*"] } }

[project.scripts]
cabench = "scripts.cli:main"